# incredis

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  flat_git.yml
cmake/Modules/: FindCryptoPP.cmake  Findhiredis.cmake  shared_git_project.cmake
include/incredis/: arg_to_bin_safe.hpp  batch.hpp  command.hpp  incredis.hpp  incredis_batch.hpp  int_conv.hpp  reply.hpp  scan_iterator.hpp  scan_iterator.inl  script.hpp  script_manager.hpp  sized_range.hpp
pkgconfig/: incredis.pc.in
src/: async_connection.cpp  async_connection.hpp  batch.cpp  command.cpp  command.hpp  incredis.cpp  incredis.hpp  incredisConfig.h.in  incredis_batch.cpp  reply.cpp  reply_list.cpp  reply_list.hpp  scan_iterator.cpp  script.cpp  script.hpp  script_manager.cpp  thread_context.hpp
test/integration/: CMakeLists.txt  main.cpp  redis_connection_fixture.cpp  redis_connection_fixture.hpp  test_insert_retrieve.cpp  test_mass_io.cpp
